Fix CommandSigns & Update dependencies (#37)